# termi-timer

./: .clang-format  CMakeLists.txt  README.md  main.c  run.sh
src/: UI.c  UI.h
